@@ -32,7 +32,7 @@ public class LogStrippingRecipe implements Recipe<SimpleContainer> {
         if (pLevel.isClientSide()) {
             return false;
         }
-        return inputItems.getFirst().test(pContainer.getItem(LogStripperBlockEntity.INPUT_SLOT_INDEX));
+        return inputItems.get(0).test(pContainer.getItem(LogStripperBlockEntity.INPUT_SLOT_INDEX));
     }
 
     @Override
